[gd_scene load_steps=9 format=3 uid="uid://br884bfvf7r1"]

[ext_resource type="Theme" uid="uid://boypmsk4lai2y" path="res://main_theme.tres" id="1_0fwgd"]
[ext_resource type="Script" path="res://scene/CardUI/CardUI.gd" id="2_ao7bk"]
[ext_resource type="Script" path="res://scene/CardUI/CardStateMachine.gd" id="3_liuia"]
[ext_resource type="Script" path="res://scene/CardUI/CardState/CardBaseState.gd" id="4_7t5pq"]
[ext_resource type="Script" path="res://scene/CardUI/CardState/CardClickedState.gd" id="5_r75x1"]
[ext_resource type="Script" path="res://scene/CardUI/CardState/CardDraggingState.gd" id="6_s6wje"]
[ext_resource type="Script" path="res://scene/CardUI/CardState/CardReleasedState.gd" id="7_gesdg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7wdty"]
size = Vector2(25, 30)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(25, 30)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -231.0
offset_bottom = -114.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0fwgd")
script = ExtResource("2_ao7bk")

[node name="Color" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.486275, 0.176471, 0.694118, 1)

[node name="State" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "State"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DropPointDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(12.5, 15)
shape = SubResource("RectangleShape2D_7wdty")

[node name="CardStateMachine" type="Node2D" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("3_liuia")
initialState = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("4_7t5pq")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_r75x1")
state = 1

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_s6wje")
state = 2

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_gesdg")
state = 4

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPointDetector" to="." method="_on_drop_point_detector_area_entered"]
[connection signal="area_exited" from="DropPointDetector" to="." method="_on_drop_point_detector_area_exited"]
